[tool.poetry]
name = "super-resolution"
version = "0.1.0"
description = ""
authors = ["Daria Yermakova <daria.yerm0710@gmail.com>"]
readme = "README.md"
packages = [{include = "super_resolution"}]

[tool.poetry.dependencies]
python = "^3.11"
scikit-image = "^0.20.0"
opencv-python = "^4.7.0.72"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
